[gd_scene load_steps=9 format=2]

[ext_resource path="res://KinematicBody2D.gd" type="Script" id=1]
[ext_resource path="res://sprites/Rose test sprites/idle.png" type="Texture" id=2]
[ext_resource path="res://sprites/Rose test sprites/run_strip8.png" type="Texture" id=3]
[ext_resource path="res://sprites/Rose test sprites/start slash attack.png" type="Texture" id=4]

[sub_resource type="Animation" id=1]

resource_name = "Idle"
length = 1.0
loop = false
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("StillSprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=2]

resource_name = "Run"
length = 1.05
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("RunSprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6, 0.75, 0.9, 1.05 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=3]

resource_name = "StartSlash"
length = 1.0
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("StartSlashSprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[node name="Rose" type="KinematicBody2D" index="0"]

position = Vector2( 314, 193 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )

[node name="animator" type="AnimationPlayer" parent="." index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/Idle = SubResource( 1 )
anims/Run = SubResource( 2 )
anims/StartSlash = SubResource( 3 )
blend_times = [  ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

shape = SubResource( 4 )

[node name="StillSprites" type="Sprite" parent="." index="2"]

texture = ExtResource( 2 )
_sections_unfolded = [ "Animation" ]

[node name="RunSprites" type="Sprite" parent="." index="3"]

visible = false
texture = ExtResource( 3 )
hframes = 8
frame = 7
_sections_unfolded = [ "Animation" ]

[node name="StartSlashSprites" type="Sprite" parent="." index="4"]

visible = false
texture = ExtResource( 4 )
hframes = 3
frame = 2
_sections_unfolded = [ "Animation" ]


